--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@
   border-right: 2px solid #EAAB00;
 }
 
+.sidebar nav ul li {
+  font-weight: bold; /* Make the list items bold */
+  font-size: 18px; /* Optional: Adjust the font size if needed */
+}
+
 .profile {
   text-align: center;
   margin-top: 100px;
@@ -59,6 +64,7 @@
   display: flex;
   justify-content: center;
   margin-top: 100px;
+  font-weight: bold;
 }
 
 .social-icons a {
@@ -67,6 +73,8 @@
   font-size: 35px;
   margin: 0 10px;
 }
+
+
 
 nav {
   flex-grow: 1;
