--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,8 @@
   text-decoration: none;
   font-size: 35px;
   margin: 0 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 
@@ -206,6 +208,7 @@ h2 {
   padding-top: 20px;
   margin-left: 0;
   margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .bottom-left-list li, .bottom-middle-list li, .bottom-right-list li {
